# bazel-differous

./: .gitignore  .gitmodules  CONTRIBUTORS.md  CREDITS.md  Cargo.toml  Justfile  README.md  nextest.toml
.github/workflows/: ci.yml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: bazel.rs  hash.rs  impact.rs  lib.rs  models.rs
crates/integration-tests/: Cargo.toml
crates/integration-tests/src/: lib.rs
crates/integration-tests/tests/: generate_hashes_parity.rs  impact_parity.rs  smoke.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/examples/: decode_stream.rs
crates/proto/proto/: analysis_v2.proto
crates/proto/src/: lib.rs
docs/: architecture.md  bzlmod-notes.md  testing.md
tests/fixtures/generate/bzlmod/: MODULE.bazel  content_hashes.json  modified_files.txt  seed_files.txt
tests/fixtures/generate/bzlmod/depmod/: BUILD.bazel  MODULE.bazel  dep.sh
tests/fixtures/generate/bzlmod/pkg/: BUILD.bazel  core.sh  tool.sh
tests/fixtures/generate/workspace/: WORKSPACE  content_hashes.json  modified_files.txt  seed_files.txt
tests/fixtures/generate/workspace/app/: BUILD.bazel  lib.sh  main.sh
tests/fixtures/generate/workspace/external_repo/: BUILD.bazel  WORKSPACE  ext.sh  ext_data.txt
tests/fixtures/impact/: dep_edges.json  final.json  starting.json
tests/golden/upstream/: help.txt  usage-generate-hashes.txt  usage-get-impacted-targets.txt
