[package]
name = "bazel-differrous-core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
bytes = { workspace = true }
bazel-differrous-proto = { path = "../proto" }
prost = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
tempfile = { workspace = true }

[dev-dependencies]
seq-macro = { workspace = true }
